--- a/picontroller/controller.org
+++ b/picontroller/controller.org
@@ -5,8 +5,6 @@
 * Objective
 To define a useful library for people to control the robot without worrying too much about the low level implementation.
 Effectively, think high level and let my library deal with low level control of motor controllers.
-
-
 * Direction
 ** Compass
 So the motor controller has directions expressed as numbers but I'd rather have programmers use more intuitive units.
@@ -31,7 +29,7 @@ Keep in mind that all directions are in terms of the robot's frame of reference 
 |-----------+--------|
 
 #+NAME: direction
-#+BEGIN_SRC python :tangle compass.py 
+#+BEGIN_SRC python :tangle compass.py :noweb yes
 class Compass(object):
   N, NE, E, SE, S, SW, W, NW = range(1,9)
   CW, CCW = range(9,11)
@@ -64,9 +62,8 @@ def __init__(self,value):
   elif 1 <= value <= 10:
     self.value = value
   else:
-    raise CompassError
+    raise ValueError("Compass is given invalid argument")
 #+END_SRC
-
 *** repr
 Changing the representation from default value since it's best if the value returned is a cardinal direction with a prefix stating it's a compass direction
 #+NAME: directionRepr
@@ -86,71 +83,58 @@ Compass.convert("N") == 1
 
 #+NAME: directionConvert
 #+BEGIN_SRC python
-@staticmethod
-def convert(direction = None):
-  #Sanitizing inputs
-  if direction == None:
-      raise ValueError('Compass direction is not given. Please enter valid input')
+  @staticmethod
+  def convert(direction = None):
+    #Sanitizing inputs
+    if direction == None:
+        raise ValueError('Compass direction is not given. Please enter valid input')
 
-  # If the input is a number, return a string
-  if 1 <= direction <= 10:
-     directionList = {
-      1:"N",
-      2:"NE",
-      3:"E",
-      4:"SE",
-      5:"S",
-      6:"SW",
-      7:"W",
-      8:"NW",
-      9:"CW",
-      10:"CCW"
-    }
-    direction_raw = directionList.get(direction, None)
-    if direction_raw is not None:
-        return direction_raw
-    else:
-        raise ValueError('Compass direction should be a valid integer number from 1 to 10')
+    # If the input is a number, return a string
+    if 1 <= direction <= 10:
+       directionList = {
+        1:"N",
+        2:"NE",
+        3:"E",
+        4:"SE",
+        5:"S",
+        6:"SW",
+        7:"W",
+        8:"NW",
+        9:"CW",
+        10:"CCW"
+       }
+       direction_raw = directionList.get(direction, None)
+       if direction_raw is not None:
+         return direction_raw
+       else:
+         raise ValueError('Compass direction should be a valid integer number from 1 to 10')
+    # If the input is a string, return a number
 
-  # If the input is a string, return a number
-  if isinstance(direction, basestring):
-    directionList = {
-        # Actual Directions
-        "N"   : Compass.N,
-        "NE"  : Compass.NE,
-        "E"   : Compass.E,
-        "SE"  : Compass.SE,
-        "S"   : Compass.S,
-        "SW"  : Compass.SW,
-        "W"   : Compass.W,
-        "NW"  : Compass.NW,
-        # Spins the robot
-        "CW"  : Compass.CW,
-        "CCW" : Compass.CCW
-    }
-    direction_raw = directionList.get(direction, None)
-    if 1 <= direction_raw <= 10:
+    if isinstance(direction, basestring):
+      directionList = {
+          # Actual Directions
+          "N"   : Compass.N,
+          "NE"  : Compass.NE,
+          "E"   : Compass.E,
+          "SE"  : Compass.SE,
+          "S"   : Compass.S,
+          "SW"  : Compass.SW,
+          "W"   : Compass.W,
+          "NW"  : Compass.NW,
+          # Spins the robot
+          "CW"  : Compass.CW,
+          "CCW" : Compass.CCW
+       }
+      direction_raw = directionList.get(direction, None)
+      if 1 <= direction_raw <= 10:
         return direction_raw
-    else:
+      else:
         raise ValueError('Compass direction should be a valid string as an input.')
-     # Somehow, you've reached here. This should not happen but whatever, raise the error
-    
-    raise CompassError('Invalid input - input entered is neither string nor number')
+       # Somehow, you've reached here. This should not happen but whatever, raise the error
+      raise ValueError('Invalid input - input entered is neither string nor number')
 #+END_SRC
 
-*** TODO Unit Tests
-While unit tests might seem a bit odd, it might be worth it.
-#+BEGIN_SRC python :tangle tests/direction/compass.py
-
-import unittest
-import picontroller.compass
-
-print(N)
-#+END_SRC
-
-
-
-** Vector
+** COMMENT Vector
 
 So we're going to implment a quick and dirty wrapper around numpy's vectors so that I can use them wherever I need vectors. 
 Also, I might change from numpy to a another library but who knows.
@@ -204,29 +188,6 @@ if __name__=="__main__":
     distance = finish - start
     print(distance)
 #+END_SRC
-*** VectorError
-I like better named exceptions.
-#+BEGIN_SRC python :tangle direction/vector.py
-
-class VectorError(ValueError):
-    def __init__(self,*args,**kwargs):
-        ValueError.__init__(self,*args,**kwargs)
-
-#+END_SRC
-
-*** Unit tests
-#+BEGIN_SRC python :tangle tests/direction/vector.py
-import unittest
-
-#from VectorDirection import VectorDirection
-
-class VectorDirectionTestCase(unittest.TestCase):
-    """Tests for Vector Direction."""
-
-    def add(self):
-        """Is five successfully determined to be prime?"""
-        self.assertTrue()
-#+END_SRC 
 * Instruction
 
  So this is the function that sends instructions to the motor controller using the serial library.
@@ -301,60 +262,99 @@ def execute(self):
   logger.info(instruction)
   self.ser.write(instruction)         #Actually send stuff to the robot.
 #+END_SRC
-* Position
-** Coordinate
+* Coordinate
 
 Since we'll be passing coordinates all the time, I thought it would make sense to treat it as a numpy vector to improve its efficiency.
- #+BEGIN_SRC python :tangle coordinate.py
-import numpy
-class Coordinate(numpy.ndarray):
+We'll be using this in the Sensor class to return a Coordinate and it's quite likely that this will be used in a PID loop.
+ #+BEGIN_SRC python :tangle coordinate.py :noweb yes
+import numpy as np
+class Coordinate(np.ndarray):
   <<coordinateNew>>
   <<coordinateArrayFinalize>>
+  <<coordinateArrayAdd>>
 
 if __name__=="__main__":
-    start = Coordinate(1,2)
-    finish = Coordinate(4,5)
-    print("The distance between start and finish is")
-    distance = finish - start
-    print(distance)
+  start = Coordinate(1,2,0)
+  finish = Coordinate(4,5,0)
+   
+  print("The distance between start and finish is")
+  distance = finish - start
+  print(distance)
 #+END_SRC
 
-*** new
+** new
 #+NAME: coordinateNew
+#+BEGIN_SRC python :noweb yes
+def __new__(cls, x,                  # Required argument - x coordinate
+                 y,                  # Required argument - y coordinate
+                 theta,              # Required argument - inclination of the robot with respect to the x axis.
+                 info = None):              # Optional argument - Info about the numpy array in case you want to tag it with some information.
+
+
+  <<coordinateNewCheck>>
+  # We need to make ndarray instance using x, y & theta values.
+  dimension = np.dtype({'names':  ('x',  'y',  'theta'),
+                        'formats':('f8', 'f8', 'f8')})
+  input_array = np.array([(x,y,theta)],dimension)
+  # We first cast to be our class type
+  obj = np.asarray(input_array).view(cls)
+  # add the new attribute to the created instance
+  obj.info = info
+
+  # Finally, we must return the newly created object:
+  return obj
+#+END_SRC
+*** argument checks
+#+NAME: coordinateNewCheck
 #+BEGIN_SRC python
-    def __new__(cls, x=None, y=None, info=None):
-       # Sanitizing x and y values
-       if x == None or y == None:
-         raise ValueError('Incomplete coordinate input')
-       
-       def is_number(s):
-           try:
-               float(s)
-               return True
-           except ValueError:
-               return False
-      
-       if not (is_number(x) and is_number(y)):
-         raise ValueError('Incorrect input. Please use numbers only')
-    
-       # We need to make ndarray instance using x and y values.
-       input_array = numpy.array([x,y])
-       # We first cast to be our class type
-       obj = numpy.asarray(input_array).view(cls)
-       # add the new attribute to the created instance
-       obj.info = info
-       # Finally, we must return the newly created object:
-       return obj
+  # Sanitizing x and y values
+  if (
+      x is None or 
+      y is None or 
+      theta is None
+     ):
+    raise ValueError('Incomplete coordinate input. Please enter valid x, y & theta')
+
+  def is_number(s):
+      try:
+          float(s)
+          return True
+      except ValueError:
+          return False
+
+  if (
+      not (is_number(x) and 
+           is_number(y) and
+           is_number(theta)
+          )
+     ):
+    raise ValueError('Incorrect input. Please use numbers only for x, y & theta arguments')
 #+END_SRC
 
-*** array finalize
+** array finalize
 #+NAME: coordinateArrayFinalize
 #+BEGIN_SRC python
-    def __array_finalize__(self, obj):
-       # see InfoArray.__array_finalize__ for comments
-       if obj is None: return
-       self.info = getattr(obj, 'info', None)
+  def __array_finalize__(self, obj):
+    # see InfoArray.__array_finalize__ for comments
+    if obj is None: return
+    self.info = getattr(obj, 'info', None)
  #+END_SRC
+
+** add
+#+NAME: coordinateArrayAdd
+#+BEGIN_SRC python
+  def __add__(self,other):
+
+    return Coordinate(self["x"][0]     + other["x"][0],
+                      self["y"][0]     + other["y"][0],
+                      self["theta"][0] + other["theta"][0])
+  def __sub__(self,other):
+
+    return Coordinate(self["x"][0]     - other["x"][0],
+                      self["y"][0]     - other["y"][0],
+                      self["theta"][0] - other["theta"][0])
+#+END_SRC
+
 * Robot
 
 Acts as an adapter between the higher-level interface users use and the Instruction class that sends instructions to the robot.
@@ -441,7 +441,6 @@ class Robot(object):
 
 #+END_SRC 
 
-
 * Distance Sensor Filter
 
 The type of filter we're using is a IIR - Infinite Impulse Response. It's the easist kind of filter you can think of and we'll be messing around with it for now.
@@ -457,28 +456,32 @@ f.update(z)       # Plugs in a numpy array to update the Kalman filter with new 
 #+END_EXAMPLE
 
 
-#+BEGIN_SRC python :tangle filter/Sensor.py
+#+BEGIN_SRC python :tangle filter/sensor.py :noweb yes
 import numpy as np
 import warnings #Used primarily to give warnings about default values
-import logging #Used to log information that might help with debugging
+import logging  #Used to log information that might help with debugging
+
+import 2018.piController.coordinate
+
+
 logging.basicConfig(level=logging.INFO)
 logger = logging.getLogger(__name__)
 
 
 
-class Sensor(object):
+class IIR(object):
 
-  <<init>>
+  <<sensorInit>>
+  <<sensorUpdate>>
+  <<sensorErrorEstimate>>
+  <<sensorQuery>>
 #+END_SRC
 
-
-
-** init function
-
+** Init
 Creates a sensor object that filters your distance sensor inputs. We'll be doing argument checks to ensure that the inputs given are valid.
 We'll also raise warnings in case the sensor has a default argument - explicit values are always better than assuming the default works.
 
-#+NAME: init
+#+NAME: sensorInit
 #+BEGIN_SRC python
 def __init__(self,parameter,
                   resolution,
@@ -486,20 +489,24 @@ def __init__(self,parameter,
                   linearTransform,
                   offset):
 
+  # Creates a logger for this class.
   logger.info('Creating a Sensor Object')
+
   <<parameterCheck>>
   <<initialEstimateCheck>>
   <<resolutionCheck>>
   <<linearTransformCheck>>
   <<offsetCheck>>
+
+  logger.info('Sensor Object created')
 #+END_SRC
 *** Parameter
 #+NAME: parameterCheck
 #+BEGIN_SRC python
 if parameter is None:
-  raise ValueError("No sensitivity parameter passed to Sensor. Must lie between 1 & 0.
-                    This parameter decides the relative importance between your current estimate and the measurements you give it.
-                    The closer to zero, the less sensitive you are to new inputs and vice versa.")
+  raise ValueError("""No sensitivity parameter passed to Sensor. Must lie between 1 & 0.
+                      This parameter decides the relative importance between your current estimate and the measurements you give it.
+                      The closer to zero, the less sensitive you are to new inputs and vice versa.""")
 elif not 0 < parameter < 1:
   raise ValueError("Parameter must lie between zero and one.")
 else:
@@ -512,9 +519,9 @@ logger.debug('Parameter passed to Sensor object: %s',self.parameter)
 #+NAME: initialEstimateCheck
 #+BEGIN_SRC python
 if initialEstimate is None:
-  warnings.warn("Initial sensor estimate is not provided.
-                 Defaulting to numpy array of zeros.
-                 Sensor is better if initial estimate is given.")
+  warnings.warn("""Initial sensor estimate is not provided.
+                   Defaulting to numpy array of zeros.
+                   Sensor is better if initial estimate is given.""")
   self.estimate = np.array([0.,   #1
                             0.,   #2
                             0.,   #3
@@ -557,9 +564,8 @@ logger.debug('linear transform passed to Sensor object: %s',self.linearTransform
 #+BEGIN_SRC python
 if offset is None: 
   self.offset = np.array([0,0])
-  warnings.warn("Initial offset is not provided.
-                 Defaulting to numpy array of zeros.
-                 ")
+  warnings.warn("""Initial offset is not provided.
+                 Defaulting to numpy array of zeros.""")
 else:
   self.offset = offset
 
@@ -568,69 +574,76 @@ logger.debug('Offset passed to Sensor object: %s',self.offset)
 
 
 ** Update
-#+NAME: update
+The update function accepts a new measurement and updates its measurement. The parameter variable is used to give importance to either the estimate we have or the new measurement we receive.
+Since our distance sensors are fairly reliable, it wouldn't hurt to make the parameter value close to 1.
+#+NAME:sensorUpdate
 #+BEGIN_SRC python
-  def update(self, current):
-    if current is None:
-      raise ValueError("No current measurement passed to the filter")
+def update(self, current):
+  if current is None:
+    logger.debug("No new measurement passed to filter.")
+    raise ValueError("No new measurement passed to the filter.")
+  elif current.shape is not self.estimate.shape:
+    logger.info("Current estimate & Measurement mismatch")
+    logger.debug("Current measurement shape  : %s", current.shape)
+    logger.debug("Estimated measurement shape: %s", self.estimate.shape)
+    raise ValueError("The new measurement has a different dimension than the estimate.")
+  else:
+    logger.debug("New measurement passed to filter ")
     self.estimate = self.estimate * (1. - self.parameter) + current * (self.parameter)
 #+END_SRC
 ** Error Estimate Function
-#+NAME: errorEstimate
+The error estimate of a measurement increases with distance ie the further away an object is, the less certain you are about the validity of your measurement.
+Since we have a bunch of sensors all around our robot (but all the sensors are identical), it's better to include error estimates in our logic.
+#+NAME: sensorErrorEstimate
 #+BEGIN_SRC python
-  def errorEstimate(self,distance):
-    # insert a dict for the distance error estimates.
-    # Make it a vectorized function for this.
-    return np.ones(distance.shape)
+def errorEstimate(self,distance):
+  # insert a dict for the distance error estimates.
+  # Make it a vectorized function for this.
+
+  return np.ones(distance.shape)
 #+END_SRC
 
 ** Query Function
-#+NAME: query
+#+NAME: sensorQuery
 #+BEGIN_SRC python
-  def query(self):
-    A = self.estimate
+def query(self):
+  A = self.estimate
 
-    #Get the average of every two intervals.       
-    A = (A[::2] + A[1::2]) / 2
+  #Get the average of every two intervals.   
+  A = A.reshape(reshape((A.size/2, 2)))
+  A = A.sum(axis=1) / 2
 
-    # Weight our measurements in terms of the error estimates
-    eA = self.errorEstimate(A)
-    denom = eA[:2] + eA[2:]
-
-    denom = np.concatenate((denom,denom))
-    A     = np.multiply(A,eA[   [2,3,0,1]   ]) / denom
-
-
+  # Weight our measurements in terms of the error estimates
+  eA = self.errorEstimate(A)
+  denom = eA[:2] + eA[2:]
+  denom = np.concatenate((denom,denom))
+  A     = np.multiply(A,eA[   [2,3,0,1]   ]) / denom
 
 
-    # Finding the difference between every other element of form [C - A, D - B]
-    coordinate = (A[[2,3]]  - A[[0,1]]) / 2      # of form x & y
-    print "poop"
-    print coordinate
 
-    # Converting our coordinate into something someone else can use intuitively
-    coordinate = coordinate
-    coordinate = np.dot(self.linearTransform,coordinate) + self.offset
-    print coordinate
-    coordinate = coordinate  //  self.resolution                 # divides it by the required resolution
-    print coordinate
 
-    # Finding the "theta" of the inclination of the robot.
-    A = self.estimate
-
-    #Get the average of every two intervals.       
-    A = A[::2] - A[1::2]
-    A = A[np.argsort(eA)]       # Sort in terms of lower errorEstimate
-    theta = np.sum(A[:2:1])
-
-    ans = {}
-    ans["x"]     = coordinate[0]
-    ans["y"]     = coordinate[1]
-    ans["theta"] = theta
-
-    return ans
+  # Finding the difference between every other element of form [C - A, D - B]
+  coordinate = (A[[2,3]]  - A[[0,1]]) / 2      # of form x & y
+  print "poop"
+  print coordinate
+  # Converting our coordinate into something someone else can use intuitively
+  coordinate = coordinate
+  coordinate = np.dot(self.linearTransform,coordinate) + self.offset
+  print coordinate
+  coordinate = coordinate  //  self.resolution                 # divides it by the required resolution
+  print coordinate
+  # Finding the "theta" of the inclination of the robot.
+  A = self.estimate
+  #Get the average of every two intervals.       
+  A = A[::2] - A[1::2]
+  A = A[np.argsort(eA)]       # Sort in terms of lower errorEstimate
+  theta = np.sum(A[:2:1])
+  ans = {}
+  ans["x"]     = coordinate[0]
+  ans["y"]     = coordinate[1]
+  ans["theta"] = theta
+  return ans
 #+END_SRC
-
 
 
 
@@ -880,7 +893,6 @@ if __name__ == "__main__":
     pylab.show()
 
 #+END_SRC
-
 
 
 
